package com.github.halo.remoting.client;

/**
 * @author mason.lu 2021/6/24
 */
public abstract class AbstractClient {
}
