package com.github.halo.spring;

/**
 * 服务消费者
 * @author mason.lu 2021/6/26
 */
public class HaloServiceConsumer {

    public <T> T getReference(Class<T> clazz){
        return null;
    }
}
