package com.github.halo.spring;

/**
 * 服务提供者
 * @author mason.lu 2021/6/26
 */
public class HaloServiceProvider {

    /**
     *
     * */
    public <T,E extends T> void export(Class<T> clazz,E impl){

    }
}
