@startuml
'https://plantuml.com/class-diagram

class HaloServiceConsumer{
    + getReference(Class<T> clazz): T
}


class HaloServiceProvider{
    + export(Class<T> clazz,(? extends T) impl);
}

abstract class AbstractServer{
    - localAddress
    # {abstract} doStart();
    # {abstract} doOpen();
}

class NettyClient

class NettyServer

abstract class AbstractClient{
    {abstract}
}

abstract class AbstractConnectionManager{

}

NettyServer --|> AbstractServer


NettyClient --|> AbstractClient


@enduml